[package]
name = "discord-help-bot"
version = "0.1.0"
authors = ["Rohit <rohitshukla7970@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
    "rustls_backend"], version = "0.9.0-rc.2"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

